# Xidi-SDL3-Plugin

./: CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
include/Xidi/: PhysicalControllerBackend.h  PhysicalControllerTypes.h  Plugin.h  VirtualControllerTypes.h
src/: PluginEntry.cpp  SDL3Backend.cpp  SDL3Backend.h
